--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 /* =========== GOOGLE FONT =========== */
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Jost:ital,wght@0,100..900;1,100..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   /* =========== COLORS =========== */
-  --primary-color: #3a2a2a;
-  --secondary-color: #ff80b5;
+  --primary-color: #8d27ae;
+  --secondary-color: #0D32AB;
   --black-color: #000000;
   --white-color: white;
   --background-color: white;
 
   /* =========== TYPOGRAPHY =========== */
-  --main-font: "Assistant", sans-serif;
+  --main-font: "Poppins", sans-serif;
   --h1-font-size: 3rem;
   --h2-font-size: 2rem;
   --h3-font-size: 1.8rem;
@@ -43,6 +44,7 @@
 ul {
   list-style-type: none;
 }
+
 a {
   text-decoration: none;
 }
@@ -73,7 +75,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #3a2a2a;
+  background-color: var(--primary-color);
   border-radius: 10px;
   border: 1px solid white;
 }
