--- a/src/pages/allProductsPage/allProductsPage.css
+++ b/src/pages/allProductsPage/allProductsPage.css
@@ -4,7 +4,7 @@
 }
 
 .allproducts-categories-bar {
-  background-color: #ffe9ee;
+  background-color: #ebebeb;
   padding: 10px 0;
 }
 
@@ -49,7 +49,7 @@
 
 .allproducts-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 24px;
 }
 
@@ -146,6 +146,7 @@
     gap: 16px;
   }
 }
+
 @media (min-width: 769px) {
   .allproducts-categories-animated-wrapper {
     max-height: none;
