--- a/src/pages/allProductsPage/allProductsPage.css
+++ b/src/pages/allProductsPage/allProductsPage.css
@@ -89,7 +89,7 @@
   display: none;
   text-align: center;
   padding: 1rem;
-  background-color: #ffe9ee;
+  background-color: #ebebeb;
   font-weight: 600;
   cursor: pointer;
 }
