--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,11 +41,11 @@
   right: 0;
   top: 0;
   z-index: 10;
-  background-color: white;
+  background-color: black;
   height: 100%;
   width: 280px;
   display: flex;
-  padding: 10rem 3rem 0 3rem;
+  padding: 5rem 2rem 0 1rem;
   transform: translatex(100%);
   transition: all 300ms ease-in-out;
 }
@@ -110,6 +110,7 @@ button {
   font-family: var(--main-font);
   background-color: transparent;
   cursor: pointer;
+  color: white; 
 }
 
 img {
