--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -499,7 +499,16 @@
   }
 
   .product-grid {
-    gap: 0.2rem;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 250px;
+    gap: 1rem;
+  }
+
+  .product-card.large,
+  .product-card.medium,
+  .product-card.small {
+    grid-column: span 1;
+    grid-row: span 1;
   }
 
   .view-all {
