--- a/src/pages/adminPage/adminPage.css
+++ b/src/pages/adminPage/adminPage.css
@@ -70,7 +70,7 @@
 
 .adminPage-loginButton {
   padding: 0.75rem 1.5rem;
-  background-color: #3a2e2e;
+  background-color: black;
   color: white;
   font-weight: bold;
   border: none;
