--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -267,7 +267,8 @@
   background-color: #fbd3d3;
   padding: 4rem 2rem 1rem;
   border-radius: 20px;
-  width: 30rem;
+  width: 100%;
+  max-width: 30rem;
   text-align: center;
   color: black;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -408,7 +409,8 @@
   background-color: #ffffff;
   padding: 1.5rem;
   border-radius: 12px;
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   border: 1px solid #e0e0e0;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   text-align: left;
@@ -460,6 +462,11 @@
     height: 80vh;
     /* shorter for mobile */
     background-position: center;
+  }
+
+  .slideshow-content .desc {
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 
   .slideshow-content {
